cmake_minimum_required(VERSION 3.1)
add_definitions(-std=c++0x)
project(sol)
include_directories(solver_lib)
include_directories(formatter_ex_lib)
add_subdirectory(solver_lib)
add_subdirectory(formatter_ex_lib)
add_executable(solver equation.cpp)

target_link_libraries(solver solver_lib)
target_link_libraries(solver formatter_ex)

install(TARGETS solver DESTINATION bin)
set(CPACK_PACKAGE_NAME "solver")
set(CPACK_PACKAGE_VENDOR "What?")
set(CPACK_PACKAGE_CONTACT "no_contact")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Manetenier")
set(CPACK_PACKAGE_DESCRIPTION "Please work")
set(CPACK_GENERATOR "DEB" "RPM")
include(CPack)
